tests/negative-fixtures/external_crate_cannot_call_seed_mutators_after_load/src/lib.rs
use tracewake_core::state::PhysicalState;

pub fn mutate_loaded_state(state: &mut PhysicalState) {
    let _items = state.seed_items_mut();
}
